--- a/app/src/main/res/layout/listview_monitor_main_lte.xml
+++ b/app/src/main/res/layout/listview_monitor_main_lte.xml
@@ -7,13 +7,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="6dp"
+        android:paddingTop="0dp"
+        android:paddingBottom="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:background="@drawable/layout_bg"
         android:elevation="2dp">
 
     <RelativeLayout
         android:id="@+id/layout_item_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:padding="0dp">
 
         <LinearLayout
             android:id="@+id/layout_item_main_ope"
