--- a/app/src/main/res/layout/listview_monitor_main_umts.xml
+++ b/app/src/main/res/layout/listview_monitor_main_umts.xml
@@ -8,6 +8,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="6dp"
+        android:paddingTop="0dp"
+        android:paddingBottom="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:background="@drawable/layout_bg"
         android:elevation="2dp">
 
