--- a/app/src/main/res/layout/listview_monitor_psc.xml
+++ b/app/src/main/res/layout/listview_monitor_psc.xml
@@ -7,6 +7,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="1dp"
+        android:paddingTop="3dp"
+        android:paddingBottom="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:layout_marginLeft="6dp"
         android:layout_marginRight="6dp"
         android:layout_marginBottom="6dp"
