--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -39,7 +39,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="60dp"
         android:layout_marginTop="10dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:visibility="gone" >
 
         <ProgressBar
             android:layout_width="wrap_content"
