--- a/app/src/main/res/layout/listview_monitor_main_lte.xml
+++ b/app/src/main/res/layout/listview_monitor_main_lte.xml
@@ -299,13 +299,94 @@
                 android:textColor="@android:color/black" />
         </LinearLayout>
 
+        <!-- ASU -->
+
+        <LinearLayout
+            android:id="@+id/layout_asu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layout_snr"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/lbl_asu"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.30"
+                android:text="ASU"
+                android:textStyle="bold"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:id="@+id/txt_asu"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:textStyle="normal"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
+
+        <!-- CQI -->
+
+        <LinearLayout
+            android:id="@+id/layout_cqi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layout_asu"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/lbl_cqi"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.30"
+                android:text="CQI"
+                android:textStyle="bold"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:id="@+id/txt_cqi"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:textStyle="normal"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
+
+        <!-- TA -->
+
+        <LinearLayout
+            android:id="@+id/layout_ta"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layout_cqi"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/lbl_ta"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.30"
+                android:text="TA"
+                android:textStyle="bold"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:id="@+id/txt_ta"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:textStyle="normal"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
+
         <!-- DATA -->
 
         <LinearLayout
             android:id="@+id/layout_data"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/layout_snr"
+            android:layout_below="@+id/layout_ta"
             android:orientation="horizontal" >
 
             <TextView
