--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -77,7 +77,7 @@
                     android:layout_width="match_parent"
                     android:textColor="#111111"
                     android:layout_height="wrap_content"
-                    android:text="Import form file / Not implemented yet" />
+                    android:text="Import form file" />
             </LinearLayout>
 
         </RelativeLayout>
@@ -108,7 +108,7 @@
                     android:id="@+id/txt_data_export_title"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="Export"
+                    android:text="Export (online)"
                     android:textColor="#555555"
                     android:textSize="20dp"/>
 
@@ -118,6 +118,46 @@
                     android:textColor="#111111"
                     android:layout_height="wrap_content"
                     android:text="Export cells to rncmobile.fr" />
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/layout_bg"
+        android:layout_margin="6dp"
+        android:clickable="true"
+        android:elevation="2dp" >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp">
+
+            <LinearLayout
+                android:id="@+id/lyt_data_export_file"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/txt_data_export_title_file"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Export (file)"
+                    android:textColor="#555555"
+                    android:textSize="20dp"/>
+
+                <TextView
+                    android:id="@+id/txt_data_export_info_file"
+                    android:layout_width="match_parent"
+                    android:textColor="#111111"
+                    android:layout_height="wrap_content"
+                    android:text="Export cells in file" />
             </LinearLayout>
 
         </RelativeLayout>
