--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -49,7 +49,8 @@
         android:background="@drawable/layout_bg"
         android:layout_margin="6dp"
         android:clickable="true"
-        android:elevation="2dp" >
+        android:elevation="2dp"
+        android:visibility="gone" >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -62,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:clickable="true"
-                android:orientation="vertical">
+                android:orientation="vertical" >
 
                 <TextView
                     android:id="@+id/txt_data_import_title"
