--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
 
     <fragment
         android:id="@+id/fragment_navigation_drawer"
-        android:name="org.rncteam.rncfreemobile.FragmentDrawer"
+        android:name="org.rncteam.rncfreemobile.activity.FragmentDrawer"
         android:layout_width="@dimen/nav_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
