--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:id="@+id/nav_header_container"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:layout_alignParentTop="true"
         android:background="@color/colorPrimary">
 
@@ -23,10 +23,10 @@
             android:textStyle="bold"/>
 
         <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginTop="0dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/rncmobile_logo" />
 
     </RelativeLayout>
 
