--- a/app/src/main/res/layout/marker_popup.xml
+++ b/app/src/main/res/layout/marker_popup.xml
@@ -7,9 +7,9 @@
 
     <ImageView
         android:id="@+id/thumbnail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@mipmap/rncmobile_logo"
         android:layout_alignParentLeft="true"
         android:layout_marginRight="8dp" />
 
