--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -6,11 +6,91 @@
     android:layout_margin="5dp" >
 
     <FrameLayout
+        android:id="@+id/lyt_info_debug"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="@drawable/layout_bg"
+        android:elevation="2dp" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Debug informations :"
+                android:id="@+id/lbl_info_debug"
+                android:textSize="15dp"
+                android:textColor="@android:color/black"
+                android:padding="2dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:text="-"
+                android:id="@+id/txt_logs_debug_badCI"
+                android:textSize="12dp"
+                android:textColor="@android:color/black"
+                android:padding="2dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:text="-"
+                android:id="@+id/txt_logs_debug_intTechno"
+                android:textSize="12dp"
+                android:textColor="@android:color/black"
+                android:padding="2dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:text="-"
+                android:id="@+id/txt_logs_debug_mncMcc"
+                android:textSize="12dp"
+                android:textColor="@android:color/black"
+                android:padding="2dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:text="-"
+                android:id="@+id/txt_logs_debug_last"
+                android:textSize="12dp"
+                android:textColor="@android:color/black"
+                android:padding="2dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:text="-"
+                android:id="@+id/txt_logs_debug_unknownIntTechno"
+                android:textSize="12dp"
+                android:textColor="@android:color/black"
+                android:padding="2dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:text="-"
+                android:id="@+id/txt_logs_debug_techno"
+                android:textSize="12dp"
+                android:textColor="@android:color/black"
+                android:padding="2dp" />
+
+        </LinearLayout>
+    </FrameLayout>
+
+    <FrameLayout
         android:id="@+id/lyt_info_version"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:background="@drawable/layout_bg"
+        android:layout_below="@id/lyt_info_debug"
         android:elevation="2dp" >
 
         <LinearLayout
@@ -153,59 +233,6 @@
                 android:layout_alignParentEnd="true"
                 android:text="-"
                 android:id="@+id/txt_logs_nb_lte"
-                android:textSize="12dp"
-                android:textColor="@android:color/black"
-                android:padding="2dp" />
-
-        </LinearLayout>
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/lyt_info_debug"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:layout_below="@id/lyt_info_logs"
-        android:background="@drawable/layout_bg"
-        android:elevation="2dp" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Debug informations :"
-                android:id="@+id/lbl_info_debug"
-                android:textSize="15dp"
-                android:textColor="@android:color/black"
-                android:padding="2dp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:text="-"
-                android:id="@+id/txt_logs_debug_first"
-                android:textSize="12dp"
-                android:textColor="@android:color/black"
-                android:padding="2dp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:text="-"
-                android:id="@+id/txt_logs_debug_second"
-                android:textSize="12dp"
-                android:textColor="@android:color/black"
-                android:padding="2dp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:text="-"
-                android:id="@+id/txt_logs_debug_techno"
                 android:textSize="12dp"
                 android:textColor="@android:color/black"
                 android:padding="2dp" />
