--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -31,6 +31,15 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:text="-"
+                android:id="@+id/txt_logs_debug_countDispatch"
+                android:textSize="12dp"
+                android:textColor="@android:color/black"
+                android:padding="2dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:text="-"
                 android:id="@+id/txt_logs_debug_badCI"
                 android:textSize="12dp"
                 android:textColor="@android:color/black"
