--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -34,6 +34,11 @@
             android:defaultValue="true"
             android:summary="Enregistre les cid lorque l'appli n'est pas éxécutée">
         </CheckBoxPreference>
+        <EditTextPreference
+            android:title="Nombre de checks sur testCi (50ms)"
+            android:key="loops"
+            android:summary="Modifie la fréquence lors du test de techno">
+        </EditTextPreference>
 
 
     </PreferenceCategory>
